# api/controller/bot-controller.go
@@ -23,6 +23,14 @@ func NewBotController(service services.BotService) BotController {
 	return &botController{}
 }
 
+// @Description Create a new bot.
+// @Tags bots
+// @Produce json
+// @Accept json
+// @Param bot body entity.PostBot true "bot"
+// @Router /bots [post]
+// @Success 200 {object} entity.Bot
+// @Failure 400
 func (*botController) CreateBot(w http.ResponseWriter, r *http.Request) {
 	w.Header().Set("Content-Type", "application/json")
 	var bot entity.Bot
@@ -43,6 +51,12 @@ func (*botController) CreateBot(w http.ResponseWriter, r *http.Request) {
 	json.NewEncoder(w).Encode(result)
 }
 
+// @Description Get all bots ordered by Zone.
+// @Tags bots
+// @Produce json
+// @Router /bots [get]
+// @Success 200 {array} entity.Bot
+// @Failure 400
 func (*botController) GetBotsOrderByZone(w http.ResponseWriter, r *http.Request) {
 	bots, err := botService.GetBotsOrderZone()
 	if err != nil {
