# api/entity/bots.go
@@ -9,3 +9,12 @@ type Bot struct {
 	} `json:"location"`
 	ZoneId string `json:"zone_id"`
 }
+
+type PostBot struct {
+	Status   string `json:"status"`
+	Location struct {
+		Lat float64 `json:"lat"`
+		Lon float64 `json:"lon"`
+	} `json:"location"`
+	ZoneId string `json:"zone_id"`
+}
